--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ limitations under the License.
 <!doctype html>
   <head>
     <meta charset="uft-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" /> -->
 
     <title>Fireworks!</title>
     <link href="css/fireworks.css" rel="stylesheet">
