--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@ limitations under the License.
       <img src="images/big-glow.png" id="big-glow" />
       <img src="images/small-glow.png" id="small-glow" />
     </aside>
-    <audio  id="audio" autoplay="autoplay" controls="controls" loop="0" preload="auto" type="audio/mpeg"
+   <!--  <audio  id="audio" autoplay="autoplay" controls="controls" loop="0" preload="auto" type="audio/mpeg"
               src="third_party/July - My Soul.mp3">
-    </audio>
+    </audio> -->
+    <embed src="third_party/July - My Soul.mp3" autostart="true" loop="true" hidden="true"></embed>
     <!-- <bgsound src="third_party/July - My Soul.mp3" loop=-1> -->
-    <!-- <audio id="audioMy" autoplay="" loop=""><source src="third_party/July - My Soul.mp3"></audio> -->
+    <audio id="audioMy" autoplay="" loop=""><source src="third_party/July - My Soul.mp3"></audio>
   </body>
   <script src="third_party/requestanimframe.js"></script>
   <script src="js/fireworks.js"></script>
