--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ limitations under the License.
     <meta charset="uft-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" /> -->
 
-    <title>Fireworks!</title>
+    <title>Gift - QIQI</title>
     <link href="css/fireworks.css" rel="stylesheet">
   </head>
   <body>
