--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ limitations under the License.
     </audio> -->
     <embed src="third_party/July - My Soul.mp3" autostart="true" loop="true" hidden="true"></embed>
     <!-- <bgsound src="third_party/July - My Soul.mp3" loop=-1> -->
-    <audio id="audioMy" autoplay="" loop=""><source src="third_party/July - My Soul.mp3"></audio>
+    <!-- <audio id="audioMy" autoplay="" loop=""><source src="third_party/July - My Soul.mp3"></audio> -->
   </body>
   <script src="third_party/requestanimframe.js"></script>
   <script src="js/fireworks.js"></script>
