--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ limitations under the License.
    <!--  <audio  id="audio" autoplay="autoplay" controls="controls" loop="0" preload="auto" type="audio/mpeg"
               src="third_party/July - My Soul.mp3">
     </audio> -->
-    <embed src="third_party/July - My Soul.mp3" autostart="true" loop="true" hidden="true"></embed>
+    <embed src="third_party/July - My Soul.mp3" autostart="true" loop="true" hidden="true" id="audioMy"></embed>
     <!-- <bgsound src="third_party/July - My Soul.mp3" loop=-1> -->
     <!-- <audio id="audioMy" autoplay="" loop=""><source src="third_party/July - My Soul.mp3"></audio> -->
   </body>
@@ -58,6 +58,24 @@ limitations under the License.
       var a= document.getElementById(li+"").innerHTML;
       document.getElementById(li+"").innerHTML=a+b;
     }
+
+    function audioAutoPlay(id){        
+      var audio = document.getElementById(id),          
+      play = function(){                
+        audio.play();                
+        document.removeEventListener("touchstart",play, false);            
+      };        
+      audio.play();       
+      document.addEventListener("WeixinJSBridgeReady", function () {            
+        play();        
+        }, false);        
+      document.addEventListener('YixinJSBridgeReady', function() {            
+        play();        
+       }, false);        
+      document.addEventListener("touchstart",play, false);    
+    }    
+    audioAutoPlay('audioMy');
+
 
   </script>
 </html>
