--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@ limitations under the License.
       <img src="images/big-glow.png" id="big-glow" />
       <img src="images/small-glow.png" id="small-glow" />
     </aside>
-    <!-- <audio  id="audioMy" autoplay="autoplay" controls="controls" loop="0" preload="auto" type="audio/mpeg" hidden="true"
-              src="">
-    </audio> -->
+    <audio  id="audioMy" src="third_party/July - My Soul.mp3"></audio>
     <!-- <embed src="third_party/July - My Soul.mp3" autostart="true" loop="true" hidden="true" id="audioMy"></embed> -->
     <!-- <bgsound src="third_party/July - My Soul.mp3" loop=-1> -->
-    <audio id="audioMy" autoplay="" loop=""><source src="third_party/July - My Soul.mp3"></audio>
+    <!-- <audio id="audioMy" autoplay="" loop=""><source src="third_party/July - My Soul.mp3"></audio> -->
+    <!-- <audio id="audioMy" autoplay="" loop="" src= "" ><source src="third_party/July - My Soul.mp3"></audio> -->
   </body>
   <script src="third_party/requestanimframe.js"></script>
   <script src="js/fireworks.js"></script>
@@ -60,8 +59,8 @@ limitations under the License.
     }
 
     function audioAutoPlay(id){        
-      var audio = document.getElementById(id);
-     var  play = function(){                
+      var audio = document.getElementById(id),
+       play = function(){                
         audio.play();                
         document.removeEventListener("touchstart",play, false);            
       };   
@@ -75,10 +74,8 @@ limitations under the License.
        }, false);        
       document.addEventListener("touchstart",play, false);    
     }   
-   
 
     audioAutoPlay('audioMy');
-
 
   </script>
 </html>
