--- a/index.html
+++ b/index.html
@@ -16,66 +16,66 @@ limitations under the License.
 
 -->
 <!doctype html>
-  <head>
+<head>
     <meta charset="uft-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" /> -->
 
-    <title>Gift - QIQI</title>
+    <title>Gift - 聪明小孩</title>
     <link href="css/fireworks.css" rel="stylesheet">
-  </head>
-  <body >
-    <!-- <button id='button' onclick='playBgMusic()'>点我开始播放</button> -->
-    <div style="z-index:1001;position:absolute;">
+</head>
+<body>
+<!-- <button id='button' onclick='playBgMusic()'>点我开始播放</button> -->
+<div style="z-index:1001;position:absolute;">
     <ul id="topDiv" style="text-align: center;color: white;font-size: 35px;list-style:none;">
-    <li id="li1" style="font-family:fantasy" ></li>
-    <li id="li2" style="font-family:fantasy"></li>
-    <li id="li3" style="font-family:fantasy"></li>
+        <li id="li1" style="font-family:fantasy"></li>
+        <li id="li2" style="font-family:fantasy"></li>
+        <li id="li3" style="font-family:fantasy"></li>
     </ul>
     <div/>
 
     <!-- Hiding library elements in the DOM is fun -->
     <aside id="library">
-      <img src="images/big-glow.png" id="big-glow" />
-      <img src="images/small-glow.png" id="small-glow" />
+        <img src="images/big-glow.png" id="big-glow"/>
+        <img src="images/small-glow.png" id="small-glow"/>
     </aside>
-    <audio  id="audioMy" src="third_party/July - My Soul.mp3"></audio>
+    <audio id="audioMy" src="third_party/July - My Soul.mp3"></audio>
     <!-- <embed src="third_party/July - My Soul.mp3" autostart="true" loop="true" hidden="true" id="audioMy"></embed> -->
     <!-- <bgsound src="third_party/July - My Soul.mp3" loop=-1> -->
     <!-- <audio id="audioMy" autoplay="" loop=""><source src="third_party/July - My Soul.mp3"></audio> -->
     <!-- <audio id="audioMy" autoplay="" loop="" src= "" ><source src="third_party/July - My Soul.mp3"></audio> -->
-  </body>
-  <script src="third_party/requestanimframe.js"></script>
-  <script src="js/fireworks.js"></script>
-  <script>
+</body>
+<script src="third_party/requestanimframe.js"></script>
+<script src="js/fireworks.js"></script>
+<script>
     // var asd= document.getElementById('audio')
     // asd.play();
-//     setTimeout(function(){
-//       audioAutoPlay('audioMy');
-//     },3000);
+    //     setTimeout(function(){
+    //       audioAutoPlay('audioMy');
+    //     },3000);
 
-    function setLiText(li,b){
-      var a= document.getElementById(li+"").innerHTML;
-      document.getElementById(li+"").innerHTML=a+b;
+    function setLiText(li, b) {
+        var a = document.getElementById(li + "").innerHTML;
+        document.getElementById(li + "").innerHTML = a + b;
     }
 
-    function audioAutoPlay(id){        
-      var audio = document.getElementById(id),
-       play = function(){                
-        audio.play();                
-        document.removeEventListener("touchstart",play, false);            
-      };   
-           
-      audio.play();       
-      document.addEventListener("WeixinJSBridgeReady", function () {            
-        play();        
-        }, false);        
-      document.addEventListener('YixinJSBridgeReady', function() {            
-        play();        
-       }, false);        
-      document.addEventListener("touchstart",play, false);    
-    }   
+    function audioAutoPlay(id) {
+        var audio = document.getElementById(id),
+            play = function () {
+                audio.play();
+                document.removeEventListener("touchstart", play, false);
+            };
+
+        audio.play();
+        document.addEventListener("WeixinJSBridgeReady", function () {
+            play();
+        }, false);
+        document.addEventListener('YixinJSBridgeReady', function () {
+            play();
+        }, false);
+        document.addEventListener("touchstart", play, false);
+    }
 
     audioAutoPlay('audioMy');
 
-  </script>
+</script>
 </html>
