--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@ limitations under the License.
         <li id="li1" style="font-family:fantasy"></li>
         <li id="li2" style="font-family:fantasy"></li>
         <li id="li3" style="font-family:fantasy"></li>
+        <li id="li4" style="font-family:fantasy"></li>
+        <li id="li5" style="font-family:fantasy"></li>
+        <li id="li6" style="font-family:fantasy"></li>
+        <li id="li7" style="font-family:fantasy"></li>
+        <li id="li8" style="font-family:fantasy"></li>
+        <li id="li9" style="font-family:fantasy"></li>
+        <li id="li10" style="font-family:fantasy"></li>
     </ul>
     <div/>
 
